# x25519Chat

./: CMakeLists.txt  README.md  vcpkg.json
chat/: CMakeLists.txt
chat/client/: CMakeLists.txt
chat/client/include/: Client.h
chat/client/src/: Client.cpp  main.cpp
chat/server/: CMakeLists.txt
chat/server/include/: Server.h
chat/server/src/: Server.cpp  main.cpp
ecdh/: CMakeLists.txt
ecdh/include/: Fe25519.h  ecdh.h  uint256.h
ecdh/src/: Fe25519.cpp  ecdh.cpp  uint256.cpp
